# zeek-log-writer-nats

./: .pre-commit-config.yaml  CHANGES  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: FindLibNATS.cmake
docker/: zeek-7.0.Dockerfile  zeek-8.0.Dockerfile  zeek-dev.Dockerfile
scripts/: __load__.zeek
src/: NATS.cc  NATS.h  Plugin.cc  Plugin.h
testing/Baseline/tests.show-plugin/: output
testing/tests/: basic-single-stream.zeek  basic.zeek  show-plugin.zeek
